:sparkles: feat: added validations, tested endpoints, updated swagger documentation
