# src/api/services/Ticket/CreateTicketService.ts
@@ -22,33 +22,32 @@ class CreateTicketService {
         const sessionMovie = await sessionRepository.findOne({
             where: { id: session_id },
         });
-        console.log("session_id:", session_id);
 
         if (!sessionMovie) {
-            throw new AppError("Sessão nao existe.");
+            throw new AppError("Session not found.", 404);
         }
 
         //conta o numero de tickets na sessão
+
         const [tickets, ticketCount] = await ticketRepository.findAndCount({
             where: { session: { id: session_id } },
         });
-        console.log("ticketCount:", ticketCount);
+        console.log(tickets);
+
 
         //valida se o número de vendas nao excedeu a capacidade
         if (ticketCount > sessionMovie.capacity - 1) {
-            throw new AppError("Sold out.");
+            throw new AppError("Sold out.", 400);
         }
 
         //valida as cadeiras
         const chairExists = await ticketRepository.findOne({
             where: { session: { id: session_id }, chair: chair },
         });
-        console.log("chair:", chair);
 
         if (chairExists) {
-            throw new AppError("Occupied chair.");
+            throw new AppError("Occupied chair.", 400);
         }
-        console.log(chairExists);
 
         const ticket = ticketRepository.create({
             value,
